...
    <string name="widgets__price__name">Bitcoin Price</string>
    <string name="widgets__suggestions__description">Discover everything Bitkit has to offer.</string>
    <string name="widgets__suggestions__name">Bitkit Suggestions</string>
    <string name="widgets__weather__condition__average__description">The next block rate is close to the monthly averages.</string>
    <string name="widgets__weather__condition__average__short_title">Average</string>
    <string name="widgets__weather__condition__average__title">Average Conditions</string>
    <string name="widgets__weather__condition__good__description">All clear. Now would be a good time to transact on the blockchain.</string>
    <string name="widgets__weather__condition__good__short_title">Favorable</string>
    <string name="widgets__weather__condition__good__title">Favorable Conditions</string>
    <string name="widgets__weather__condition__poor__description">If you are not in a hurry to transact, it may be better to wait a bit.</string>
    <string name="widgets__weather__condition__poor__short_title">Poor</string>
    <string name="widgets__weather__condition__poor__title">Poor Conditions</string>
    <string name="widgets__weather__current_fee">Current fee</string>
    <string name="widgets__weather__description">Find out when it’s a good time to transact on the Bitcoin blockchain.</string>
    <string name="widgets__weather__name">Bitcoin Weather</string>
...
